--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/thiagosouf/batepapo-uol-api#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.0"
   }
 }
