--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dayjs": "^1.11.1",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.0",
     "mongodb": "^4.5.0"
   }
