--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.0",
+    "joi": "^17.6.0",
     "mongodb": "^4.5.0"
   }
 }
